--- a/Folder/GUI_V_2/GUI_V_2/GUI_V_2.csproj
+++ b/Folder/GUI_V_2/GUI_V_2/GUI_V_2.csproj
@@ -122,6 +122,12 @@
     <Compile Include="serviceinvite.Designer.cs">
       <DependentUpon>serviceinvite.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
     <Compile Include="stockroom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="serviceinvite.resx">
       <DependentUpon>serviceinvite.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="stockroom.resx">
       <DependentUpon>stockroom.cs</DependentUpon>
