--- a/Folder/GUI_V_2/GUI_V_2/GUI_V_2.csproj
+++ b/Folder/GUI_V_2/GUI_V_2/GUI_V_2.csproj
@@ -79,6 +79,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Product.cs" />
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Purchase\Purch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Purchase\Purch.resx">
       <DependentUpon>Purch.cs</DependentUpon>
